@@ -645,7 +645,10 @@ is_uml_sys() {
 #            mount -n ${cmd}
 #
 get_mount_fstab() {
-	awk '$1 ~ "^#" { next } $2 == "'$*'" { print "-t "$3,"-o "$4,$1,$2 }' /etc/fstab
+	awk '$1 ~ "^#" { next }
+		$2 == "'$*'" { if (found++ == 0) { print "-t "$3,"-o "$4,$1,$2 } }
+		END { if (found > 1) { print "More than one entry for '$*' found in /etc/fstab!" > "/dev/stderr" } }
+	' /etc/fstab
 }
 
 # bool is_older_than(reference, files/dirs to check)
